# ram-monitor-mac

./: .gitignore  Cargo.toml  README.md  com.swack.ram-monitor.plist  justfile
.github/workflows/: release.yml
assets/: build_icns.sh  generate_icon.py  icon.icns
scripts/: make-dmg.sh
src/: main.rs
